@@ -200,6 +200,7 @@ abstract class Enumerable extends Enumerator { }
 extend('Enumerable', 'EnumerableMethods');
 alias_method('Enumerable', 'at', 'offsetGet');
 alias_method('Enumerable', 'fetch', 'offsetGet');
+alias_method('Enumerable', 'length', 'count');
 alias_method('Enumerable', 'map', 'collect');
 alias_method('Enumerable', 'size', 'count');
 alias_method('Enumerable', 'store', 'offsetSet');
